// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AudioPlayerComponent should render error message if failed 1`] = `
<app-audio-player
  __ngContext__={[Function LRootView]}
  audioDownloaded={[Function EventEmitter_]}
  availableRates={[Function Array]}
  contentItem={[Function Object]}
  courseId={[Function String]}
  currentTime={[Function String]}
  domSanitizer={[Function DomSanitizerImpl]}
  downloadName=""
  faCog={[Function Object]}
  faDownload={[Function Object]}
  faPause={[Function Object]}
  faPlay={[Function Object]}
  faSpinner={[Function Object]}
  faVolumeUp={[Function Object]}
  http={[Function HttpClient]}
  loadFailed={[Function Boolean]}
  multimedia={[Function Object]}
  playbackRate={[Function Number]}
  playerIsLoading="false"
  playing="false"
  ref={[Function ViewRef$1]}
  showSettings="false"
  showVolumeSlider="false"
  store={[Function MockStore]}
  supportEmail={[Function String]}
  timeIsManuallySet="false"
  title="null"
  trackLength={[Function String]}
  trackProgress="false"
  userPlaybackRateSub={[Function SafeSubscriber]}
  waveFormPromise={[Function ZoneAwarePromise]}
  waveformRef="undefined"
>
  <h5
    class="text-center text-error"
  >
    The file failed to load. If this persists, please 
    <a
      href="mailto:onlinecourses@hillsdale.edu?subject=Audio file failed for undefined"
    >
      contact support
    </a>
    .
  </h5>
</app-audio-player>
`;

exports[`AudioPlayerComponent should render normally if sources provided 1`] = `
<app-audio-player
  __ngContext__={[Function LRootView]}
  audioDownloaded={[Function EventEmitter_]}
  availableRates={[Function Array]}
  contentItem={[Function Object]}
  courseId={[Function String]}
  currentTime={[Function String]}
  domSanitizer={[Function DomSanitizerImpl]}
  downloadName=""
  faCog={[Function Object]}
  faDownload={[Function Object]}
  faPause={[Function Object]}
  faPlay={[Function Object]}
  faSpinner={[Function Object]}
  faVolumeUp={[Function Object]}
  http={[Function HttpClient]}
  loadFailed="false"
  multimedia={[Function Object]}
  playbackRate={[Function Number]}
  playerIsLoading="false"
  playing="false"
  ref={[Function ViewRef$1]}
  showSettings="false"
  showVolumeSlider="false"
  store={[Function MockStore]}
  supportEmail={[Function String]}
  timeIsManuallySet="false"
  title="null"
  trackLength={[Function String]}
  trackProgress="false"
  userPlaybackRateSub={[Function SafeSubscriber]}
  waveFormPromise={[Function ZoneAwarePromise]}
  waveformRef={[Function ElementRef]}
>
  <div
    class="audio-wrapper"
  >
    <div
      class="audio-preview-image"
      style="background-image: url(https://online.hillsdale.edu/assets/hillsdale-college-logo-white.svg); background-size: contain; background-repeat: no-repeat;"
    >
      <button
        class="skip-control skip-back"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="60"
          role="img"
          viewBox="-5 1 82 82"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M36,9V0L13.5,13.5L36,27v-9c14.9,0,27,12.1,27,27S50.9,72,36,72S9,59.9,9,45H0c0,19.9,16.1,36,36,36s36-16.1,36-36
          S55.9,9,36,9z"
          />
          <g>
            <path
              d="M24.8,56.5V43.7l-3.2,0.7l-0.2-5.6l10.2-2.3v19.9L24.8,56.5L24.8,56.5z"
            />
            <path
              d="M35,46.9c0-6.4,2.7-10.2,7.9-10.2s7.7,3.7,7.7,10.2c0,6.4-2.7,10.3-7.9,10.3C37.6,57.1,35,53.3,35,46.9z M44.1,46.8
                  c0-4.1-0.4-5.2-1.3-5.2s-1.3,1-1.3,5.2c0,4.1,0.4,5.2,1.3,5.2S44.1,51,44.1,46.8z"
            />
          </g>
        </svg>
        <span
          class="sr-only"
        >
          Skip backward
        </span>
      </button>
      <button
        class="skip-control skip-forward"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="60"
          role="img"
          viewBox="-5 1 82 82"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,45c0,19.9,16.1,36,36,36s36-16.1,36-36h-9c0,14.9-12.1,27-27,27S9,59.9,9,45s12.1-27,27-27v9l22.5-13.5L36,0v9
          C16.1,9,0,25.1,0,45z"
          />
          <g>
            <path
              d="M24.8,56.5V43.7l-3.2,0.7l-0.2-5.6l10.2-2.3v19.9H24.8z"
            />
            <path
              d="M35,46.9c0-6.4,2.7-10.2,7.9-10.2c5.2,0,7.7,3.7,7.7,10.2c0,6.4-2.7,10.3-7.9,10.3C37.6,57.1,35,53.3,35,46.9z M44.1,46.8
                  c0-4.1-0.4-5.2-1.3-5.2s-1.3,1-1.3,5.2c0,4.1,0.4,5.2,1.3,5.2S44.1,51,44.1,46.8z"
            />
          </g>
        </svg>
        <span
          class="sr-only"
        >
          Skip forward
        </span>
      </button>
      <div
        class="play-control d-flex d-md-none"
      >
        <button>
          <fa-icon
            class="ng-fa-icon play-icon"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-play fa-fw"
              data-icon="play"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 384 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"
                fill="currentColor"
              />
            </svg>
          </fa-icon>
        </button>
      </div>
    </div>
    <div
      class="audio-player"
    >
      <div
        class="play-control d-none d-md-block"
      >
        <button>
          <fa-icon
            class="ng-fa-icon"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-play fa-fw"
              data-icon="play"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 384 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"
                fill="currentColor"
              />
            </svg>
          </fa-icon>
        </button>
      </div>
      <div
        class="play-timer"
      >
         0:00 
      </div>
      <div
        class="waveform"
        id="waveform-mmid"
      />
      <div
        class="play-timer"
      >
         0:00
      </div>
      <div
        class="volume-control"
      >
        <button>
          <fa-icon
            class="ng-fa-icon"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-volume-high"
              data-icon="volume-high"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 640 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M533.6 32.5C598.5 85.3 640 165.8 640 256s-41.5 170.8-106.4 223.5c-10.3 8.4-25.4 6.8-33.8-3.5s-6.8-25.4 3.5-33.8C557.5 398.2 592 331.2 592 256s-34.5-142.2-88.7-186.3c-10.3-8.4-11.8-23.5-3.5-33.8s23.5-11.8 33.8-3.5zM473.1 107c43.2 35.2 70.9 88.9 70.9 149s-27.7 113.8-70.9 149c-10.3 8.4-25.4 6.8-33.8-3.5s-6.8-25.4 3.5-33.8C475.3 341.3 496 301.1 496 256s-20.7-85.3-53.2-111.8c-10.3-8.4-11.8-23.5-3.5-33.8s23.5-11.8 33.8-3.5zm-60.5 74.5C434.1 199.1 448 225.9 448 256s-13.9 56.9-35.4 74.5c-10.3 8.4-25.4 6.8-33.8-3.5s-6.8-25.4 3.5-33.8C393.1 284.4 400 271 400 256s-6.9-28.4-17.7-37.3c-10.3-8.4-11.8-23.5-3.5-33.8s23.5-11.8 33.8-3.5zM301.1 34.8C312.6 40 320 51.4 320 64V448c0 12.6-7.4 24-18.9 29.2s-25 3.1-34.4-5.3L131.8 352H64c-35.3 0-64-28.7-64-64V224c0-35.3 28.7-64 64-64h67.8L266.7 40.1c9.4-8.4 22.9-10.4 34.4-5.3z"
                fill="currentColor"
              />
            </svg>
          </fa-icon>
          <span
            class="sr-only"
          >
            Adjust volume
          </span>
        </button>
        <div
          class="slider"
          style="display: none;"
        >
          <input
            type="range"
          />
        </div>
      </div>
      <div
        class="desktop-settings d-none d-md-flex"
      >
        <div
          class="rate-control"
        >
          <div
            class="rate-list"
          >
            <a>
              <span
                class="rate-num"
              >
                2
              </span>
              <span
                class="rate-suffix"
              >
                ×
              </span>
            </a>
            <a>
              <span
                class="rate-num"
              >
                1.5
              </span>
              <span
                class="rate-suffix"
              >
                ×
              </span>
            </a>
            <a
              class="current"
            >
              <span
                class="rate-num"
              >
                1
              </span>
              <span
                class="rate-suffix"
              >
                ×
              </span>
            </a>
            <a>
              <span
                class="rate-num"
              >
                0.5
              </span>
              <span
                class="rate-suffix"
              >
                ×
              </span>
            </a>
          </div>
          <button>
            <span
              class="rate-num"
            >
              1.0
            </span>
            <span
              class="rate-suffix"
            >
              ×
            </span>
          </button>
        </div>
      </div>
      <div
        class="settings d-md-none"
      >
        <button>
          <fa-icon
            class="ng-fa-icon"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-gear"
              data-icon="gear"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336c44.2 0 80-35.8 80-80s-35.8-80-80-80s-80 35.8-80 80s35.8 80 80 80z"
                fill="currentColor"
              />
            </svg>
          </fa-icon>
          <span
            class="sr-only"
          >
            More Settings
          </span>
        </button>
        <div
          class="details"
          style="display: none;"
        >
          <div
            class="rate-control"
          >
            <button>
              <span
                class="rate-num"
              >
                1.0
              </span>
              <span
                class="rate-suffix"
              >
                ×
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</app-audio-player>
`;

exports[`AudioPlayerComponent should render nothing if no downloadAudioSrc 1`] = `
<app-audio-player
  __ngContext__={[Function LRootView]}
  audioDownloaded={[Function EventEmitter_]}
  availableRates={[Function Array]}
  contentItem={[Function Object]}
  courseId={[Function String]}
  currentTime={[Function String]}
  domSanitizer={[Function DomSanitizerImpl]}
  downloadName=""
  faCog={[Function Object]}
  faDownload={[Function Object]}
  faPause={[Function Object]}
  faPlay={[Function Object]}
  faSpinner={[Function Object]}
  faVolumeUp={[Function Object]}
  http={[Function HttpClient]}
  loadFailed="false"
  multimedia={[Function Object]}
  playbackRate={[Function Number]}
  playerIsLoading="false"
  playing="false"
  ref={[Function ViewRef$1]}
  showSettings="false"
  showVolumeSlider="false"
  store={[Function MockStore]}
  supportEmail={[Function String]}
  timeIsManuallySet="false"
  title="null"
  trackLength={[Function String]}
  trackProgress="false"
  userPlaybackRateSub={[Function SafeSubscriber]}
  waveFormPromise={[Function ZoneAwarePromise]}
  waveformRef="undefined"
>
</app-audio-player>
`;
